crates/solidity/testing/snapshots/bindings_output/yul/imported_constant/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

[39mReferences and definitions:[0m 
   ╭─[ main.sol:1:1 ]
   │
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 4 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 2
   │ 
 6 │             let x := add(FOO, 1)
   │                 ┬    ─┬─ ─┬─  
   │                 ╰───────────── name: 3
   │                       │   │   
   │                       ╰─────── ref: built-in
   │                           │   
   │                           ╰─── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ main.sol:1:1 ]
   │
 2 │ ╭─▶ 
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
   │
   ├─[ main.sol:1:1 ]
   │
 4 │ ╭─▶     function test() public {
   ┆ ┆   
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── definiens: 2
   │
   ├─[ main.sol:1:1 ]
   │
 6 │             let x := add(FOO, 1)
   │                 ┬  
   │                 ╰── definiens: 3
───╯
Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[ constants.sol:1:1 ]
   │
 1 │ uint256 constant FOO = 1;
   │ ─────────────┬────────────  
   │              ╰────────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
[39mDefiniens:[0m 
